# DroneController

./: .gitignore  .gitmodules  CMakeLists.txt  PreLoad.cmake  bootstrap.sh  docker-compose.yml  gen_protobuf_bindings.sh  run_jlc_output.sh  workspace.code-workspace
.VSCodeCounter/2021-01-25_19-56-40/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2021-01-25_19-56-56/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2021-01-25_19-57-27/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2021-01-25_19-57-39/: details.md  results.csv  results.md  results.txt
.VSCodeCounter/2021-01-25_19-58-30/: details.md  results.csv  results.md  results.txt
.devcontainer/: devcontainer.json  docker-compose.yml
hw/CubeMX/: CubeMX.ioc
hw/Fusion360/: TestPlateV1.gcode  TestPlateV1.stl
hw/PCBDesign/: AudioOut.sch  ButtonInput.sch  ButtonInput.sch-bak  DroneContrller-cache.lib  DroneContrller.sch-bak  DroneController  DroneController-cache.lib  DroneController-rescue.lib  DroneController.csv  DroneController.kicad_pcb  DroneController.kicad_pcb-bak  DroneController.net  DroneController.pro  DroneController.sch  DroneController.sch-bak  DroneController.xml  HMIHardware.sch  HMIHardware.sch-bak  JoyStick.sch  JoyStick.sch-bak  Memory.sch  Memory.sch-bak  PowerSupply.sch  PowerSupply.sch-bak  Processor.sch  Processor.sch-bak  RotaryEncoders.sch  RotaryEncoders.sch-bak  Sensors.sch  ToggleSW.sch  ToggleSW.sch-bak  Wireless.sch  Wireless.sch-bak  _autosave-Processor.sch  fp-info-cache  fp-lib-table  sym-lib-table
hw/PCBDesign/gerbers/: DroneController-B_Cu.gbr  DroneController-B_Mask.gbr  DroneController-B_Paste.gbr  DroneController-B_SilkS.gbr  DroneController-Edge_Cuts.gbr  DroneController-F_Cu.gbr  DroneController-F_Mask.gbr  DroneController-F_Paste.gbr  DroneController-F_SilkS.gbr  DroneController-In1_Cu.gbr  DroneController-In2_Cu.gbr  DroneController-NPTH.drl  DroneController-PTH.drl  DroneController-all-pos.csv  DroneController-job.gbrjob  DroneController_bom_jlc.csv  DroneController_cpl_jlc.csv
lib/: CMakeLists.txt
src/: CMakeLists.txt  startup.cpp  version.hpp
src/config/: board_map.hpp  thor_user_config.hpp  yaffs2_config_prj.hpp
src/config/bsp/: CMakeLists.txt  board_map.cpp  board_map.hpp
src/config/freertos/: FreeRTOSConfig.h
src/config/ripple/: CMakeLists.txt  ripple_packet_contract_prj.hpp  ripple_packet_defs.cpp  ripple_user_contract_prj.hpp
src/config/thor/: thor_user_config.hpp
src/config/tinyusb/: tusb_config.h
src/config/ugfx/: CMakeLists.txt  board_ST7735.cpp  board_ST7735.h  gfxconf.h  userfonts.h
src/config/ugfx/fonts/: DejaVuSans12.c
src/controller/: CMakeLists.txt  ctrl_intf.cpp  ctrl_intf.hpp  ctrl_joystick.cpp  ctrl_observers.cpp  ctrl_observers.hpp  ctrl_types.hpp
src/debug/: CMakeLists.txt  io_debug_observables.hpp  sys_debug.cpp  sys_debug.hpp
src/debug/segger/: sys_view_stubs.cpp
src/display/: CMakeLists.txt
src/hmi/: CMakeLists.txt  hmi_button.cpp  hmi_button.hpp  hmi_discrete.cpp  hmi_discrete.hpp  hmi_discrete_input.cpp  hmi_discrete_input.hpp  hmi_discrete_msg_pump.cpp  hmi_discrete_msg_pump.hpp  hmi_encoder.cpp  hmi_encoder.hpp  hmi_encoder_msg_pump.cpp  hmi_encoder_msg_pump.hpp  hmi_sticks.cpp  hmi_sticks.hpp
src/io/: CMakeLists.txt  gpio_driver.cpp  gpio_driver.hpp  pin_mapping.cpp  pin_mapping.hpp  shift_register_driver.cpp  shift_register_driver.hpp  sr_driver.cpp  sr_driver.hpp
src/monitor/: wdg_monitor.cpp  wdg_monitor.hpp
src/network/: CMakeLists.txt  net_data_package.cpp  net_data_package.hpp  network.cpp
src/registry/: CMakeLists.txt  reg_data.hpp  reg_disk.hpp  reg_driver.cpp  reg_files.hpp  reg_intf.hpp  reg_types.hpp
src/registry/data/: reg_data_button_trim.cpp  reg_data_button_up.cpp  reg_data_encoder.cpp  reg_data_switch.cpp  reg_disk.cpp
src/system/: CMakeLists.txt  power_up.cpp  power_up.hpp  sys_boot_count.cpp  sys_config.cpp  sys_config.hpp
src/tasks/: CMakeLists.txt  tsk_background.cpp  tsk_background.hpp  tsk_bluetooth.cpp  tsk_bluetooth.hpp  tsk_common.cpp  tsk_common.hpp  tsk_file_system.cpp  tsk_file_system.hpp  tsk_graphics.cpp  tsk_graphics.hpp  tsk_heartbeat.cpp  tsk_heartbeat.hpp  tsk_hmi.cpp  tsk_hmi.hpp  tsk_kernel.cpp  tsk_kernel.hpp  tsk_monitor.cpp  tsk_monitor.hpp  tsk_radio.cpp  tsk_radio.hpp  tsk_system.cpp  tsk_system.hpp  tsk_usb.cpp  tsk_usb.hpp
src/usb/: CMakeLists.txt  usb_cdc_cb.cpp  usb_descriptor_cb.cpp  usb_isr_handler.cpp  usb_system.cpp  usb_system.hpp
src/utility/: CMakeLists.txt  logger.cpp  logger.hpp  serial_output.cpp  serial_output.hpp
src/wireless/: CMakeLists.txt  rf_driver.cpp  rf_driver.hpp  rf_driver_internal.cpp  rf_driver_internal.hpp  rf_packet_types.cpp  rf_packet_types.hpp  rf_system_types.hpp
src/wireless/bluetooth/: CMakeLists.txt  bt_driver.cpp  bt_driver.hpp
src/wireless/bluetooth/rn4871/: CMakeLists.txt  rn_action_cmds.cpp  rn_action_cmds.hpp  rn_device.cpp  rn_device.hpp  rn_get_cmds.hpp  rn_manager.cpp  rn_set_cmds.hpp  rn_types.hpp
src/wireless/rf24/: CMakeLists.txt  rf_driver.cpp  rf_driver.hpp  rf_packet_types.cpp  rf_packet_types.hpp  rf_system_types.hpp
test/: serial_input.py
